# LVGL4

./: CMakeLists.txt  README.md  nrf52840dk_nrf52840.overlay  prj.conf
include/: ble_service.h  bmi160.h  lcd_display.h  rtc_driver.h  shoe.h  sprite_heart.h
src/: battery_monitor.c  ble_nus.c  ble_service.c  bmi160.c  lcd_display.c  main.c  rtc_driver.c  shoe.c  sprite_heart.c
src/bluetooth/: ble_nus.c
